test/errors/str1.ida

#OUTPUT
#Syntax Error: Invalid string assignment.
# -> [13] s1 : str = 5;
#
#END

#RET 0

extern func puts(s:str)

func main -> int
    s1 : str = 5;
    s2 : str = s1;
begin
    puts(s1);
    puts(s2);
    
    return 0;
end
